--- a/Greeter Site/holdings.html
+++ b/Greeter Site/holdings.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" href="style.css">
+	  <script type="text/javascript">
+	  window.onload = function () {
+		var chart = new CanvasJS.Chart("chartContainer",
+		{
 
-  <script type="text/javascript">
-  window.onload = function () {
-    var chart = new CanvasJS.Chart("chartContainer",
-    {
+		  title:{
+		  text: "Current Holdings"
+		  },
+		   data: [
+		  {
+			type: "line",
 
-      title:{
-      text: "Current Holdings"
-      },
-       data: [
-      {
-        type: "line",
+			dataPoints: [
+			{ x: new Date(2012, 00, 1), y: 450 },
+			{ x: new Date(2012, 01, 1), y: 414 },
+			{ x: new Date(2012, 02, 1), y: 520 },
+			{ x: new Date(2012, 03, 1), y: 460 },
+			{ x: new Date(2012, 04, 1), y: 450 },
+			{ x: new Date(2012, 05, 1), y: 500 },
+			{ x: new Date(2012, 06, 1), y: 480 },
+			{ x: new Date(2012, 07, 1), y: 480 },
+			{ x: new Date(2012, 08, 1), y: 410 },
+			{ x: new Date(2012, 09, 1), y: 500 },
+			{ x: new Date(2012, 10, 1), y: 480 },
+			{ x: new Date(2012, 11, 1), y: 510 }
+			]
+		  }
+		  ]
+		});
 
-        dataPoints: [
-        { x: new Date(2012, 00, 1), y: 450 },
-        { x: new Date(2012, 01, 1), y: 414 },
-        { x: new Date(2012, 02, 1), y: 520 },
-        { x: new Date(2012, 03, 1), y: 460 },
-        { x: new Date(2012, 04, 1), y: 450 },
-        { x: new Date(2012, 05, 1), y: 500 },
-        { x: new Date(2012, 06, 1), y: 480 },
-        { x: new Date(2012, 07, 1), y: 480 },
-        { x: new Date(2012, 08, 1), y: 410 },
-        { x: new Date(2012, 09, 1), y: 500 },
-        { x: new Date(2012, 10, 1), y: 480 },
-        { x: new Date(2012, 11, 1), y: 510 }
-        ]
-      }
-      ]
-    });
-
-    chart.render();
-  }
-  </script>
- <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+		chart.render();
+	  }
+	  </script>
+	<script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script> 
 	</head>
 	<body>
 		<script src="function.js"></script>
@@ -48,8 +48,8 @@
 		<div id = "holdings" class = "tab">
 			<h1>Current Holdings</h1>
 		</div>
-		<div id = "about" class = "tab">
-			<h1>About The Club</h1>
+		<div id = "prev" class = "tab">
+			<h1>Previous Pitches</h1>
 		</div>
 		
 		<button class="tablink" onclick="openHome()" id="defaultOpen">Home</button>
@@ -59,8 +59,8 @@
 
 		<h2>We hold a lot of stocks probably</h2>
 		<h1>Bruh moment</h1>
-		<p id = "sentencep" class = "bigtext">This is what we gonna be doing today. It's gonna be ya mom!</p>
-		<p id = "jibberishp" class = "bigtext">oasnjkcSDBIFijkSDNCBsaidnhcoiHJfoicDHNixhdfnuiachsgcf siuc hshbsiu hXJfdhs</p>
+		<div id="chartContainer" style="height: 300px; width: 100%;">
+		</div> 
 		<button id = "deezbutton" onclick = "buttonalert()">deex</button>
 	</body>
 </html>
