--- a/Greeter Site/news.html
+++ b/Greeter Site/news.html
@@ -16,8 +16,8 @@
 		<div id = "holdings" class = "tab">
 			<h1>Current Holdings</h1>
 		</div>
-		<div id = "about" class = "tab">
-			<h1>About The Club</h1>
+		<div id = "prev" class = "tab">
+			<h1>Previous Pitches</h1>
 		</div>
 		
 		<button class="tablink" onclick="openHome()" id="defaultOpen">Home</button>
